--- a/normativa.html
+++ b/normativa.html
@@ -392,6 +392,16 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 
 		<br />
 
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">Organització Orientació</div>
+		  <div class="col-sm-1"><span class="badge bg-dark">ORIENT</span></div>
+		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2023/5709&L=0" target="_blank">ORDRE 10/2023, de 22 de maig, de la Conselleria d'Educació, Cultura i Esport, per la qual es regulen i concreten determinats aspectes de l'organització i el funcionament de l'orientació educativa i professional en el sistema educatiu valencià. [2023/5709]</a>
+		  </div>
+		</div>
+
+
 
   </div>
   
