--- a/normativa.html
+++ b/normativa.html
@@ -412,7 +412,8 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 
 		<h3><span class="badge bg-primary">BOE</span>    Resolucions</h3>
 
-		<hr />
+		<br />
+
 		<br />
 		
 		<div class="row">
@@ -650,6 +651,19 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 				</a>
 			</div>
 		</div>
+
+		<br />
+		
+		<div class="row">
+			<div class="col-sm-2">Escola Oficial Idiomes</div>
+		  	<div class="col-sm-1">
+				<span class="badge bg-primary">EOI</span>
+			</div>
+		  	<div class="col-sm-8">
+				<a href="https://dogv.gva.es/va/resultat-dogv?signatura=2023/5462&L=0" target="_blank">
+					RESOLUCIÓ de 17 de maig de 2023, del director general de Política Lingüística i Gestió del Multilingüisme, per la qual s'estableixen el calendari i el procés d'admissió i matrícula per al curs acadèmic 2023-2024 en les escoles oficials d'idiomes de la Comunitat Valenciana. [2023/5462]
+				</a>
+			</div>
 	
 </div>
 	
