Video Avaluació per Competències a la LOMLOE

--- a/formacio.html
+++ b/formacio.html
@@ -120,12 +120,8 @@
 		<div class="row">
 		  <div class="col-sm-2">Programació</div>
                   <div class="col-sm-1"><span class="badge bg-danger">CURRIC</span></div>
-		  <div class="col-sm-8"><a href="https://youtu.be/ZNnA0c5M69Y" target="_blank">Primària - ANPE</a>. Proposen unes <a href="https://www.anpecomunidadvalenciana.es/notices/169963/Gu%C3%ADas-LOMLOE%2c-DEL-DECRETO-A-LA-PROGRAMACI%C3%93N-DE-AULA-por-etapas-educativas"> guies de programació</a>.</div>
-		</div>
-
-		<br/>
-
-  </div>
+		  <div class="col-sm-8"><a href="https://youtu.be/ZNnA0c5M69Y" target="_blank">Primària - ANPE</a>. Proposen unes <a href="https://www.anpecomunidadvalenciana.es/notices/169963/Gu%C3%ADas-LOMLOE%2c-DEL-DECRETO-A-LA-PROGRAMACI%C3%93N-DE-AULA-por-etapas-educativas"> guies de programació</a>.</div>		</div>
+		  <div class="col-sm-8"><a href="https://www.youtube.com/watch?v=dnjHzdQb4e0" target="_blank">Evaluación por competencias en el marco de la LOMLOE</a>.
 
   <div class="tab-pane fade show active" id="Publicacions">
 
