--- a/normativa.html
+++ b/normativa.html
@@ -272,7 +272,18 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 		</div>
 
 		<br />
+	  	  <div class="row">
+		  <div class="col-sm-2">Beques Material No Curricular</div>
+		  <div class="col-sm-1"><span class="badge bg-dark">ORIENT</span></div>
+		  <div class="col-sm-8">
+			  <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2023/5829&L=0&&texto=&solo_titulo=1&anyo_codigo=2023&codigo=5829&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 14/2023, de 24 de maig, de la consellera d'Educació, Cultura i Esport, per la qual s'aproven les bases reguladores per a la concessió d'ajudes econòmiques per al finançament de l'adquisició de material escolar no curricular per a l'alumnat pertanyent a famílies en situació de vulnerabilitat socioeconòmica, escolaritzat en els nivells d'Educació Infantil, Educació Primària i Educació Especial en centres educatius sostinguts amb fons públics de la Comunitat Valenciana. [2023/5829]</a>
+		  </div>
+		</div>
 
+		<br />
+	  
+	  
+	  
 		<div class="row">
 		  <div class="col-sm-2">Dependència</div>
 		  <div class="col-sm-1"><span class="badge bg-dark">ORIENT</span></div>
