--- a/digital.html
+++ b/digital.html
@@ -368,6 +368,22 @@
 		</div>
 
 		<br />
+
+		<div class="row">
+		    <div class="col-sm-2">Competència Digital Educativa</div>
+		    <div class="col-sm-1"><span class="badge bg-success">GVA</span></div>
+		    <div class="col-sm-8"><a href="https://intef.es/competencia-digital-educativa/" target="_blank">Competència Digital Educativa</a></div>
+		</div>
+
+		<br />
+
+	  	<div class="row">
+		    <div class="col-sm-2">Situacions d'Aprenentatge</div>
+		    <div class="col-sm-1"><span class="badge bg-success">GVA</span></div>
+		    <div class="col-sm-8"><a href="https://intef.es/recursos-educativos/situaciones-aprendizaje/" target="_blank">Situacions d'Aprenentatge</a></div>
+		</div>
+
+		<br />
 		
   </div>
 
