--- a/normativa.html
+++ b/normativa.html
@@ -178,6 +178,26 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 		</div>
 		<br />
 
+		<div class="row">
+		  <div class="col-sm-2">Instruccions Principi de Curs Infantil i Primària</div>
+		  <div class="col-sm-1"><span class="badge bg-info">INF</span> <span class="badge bg-info">PRI</span></div>
+		  <div class="col-sm-8">
+			  <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2023/7350&L=0" target="_blank">RESOLUCIÓ de 27 de juny de 2023, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Infantil de segon cicle i Educació Primària durant el curs 2023-2024. [2023/7350]</a>
+		  </div>
+
+		</div>
+		<br />
+	  
+		<div class="row">
+		  <div class="col-sm-2">Instruccions Principi de Curs Secundària i Batxillerat</div>
+		  <div class="col-sm-1"><span class="badge bg-info">SEC</span> <span class="badge bg-info">BAT</span></div>
+		  <div class="col-sm-8">
+			  <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2023/7359&L=0" target="_blank">https://dogv.gva.es/va/resultat-dogv?signatura=2023/7359&L=0</a>
+		  </div>
+
+		</div>
+		<br />
+	  
   </div>
   
   	<br />
