--- a/normativa.html
+++ b/normativa.html
@@ -714,6 +714,24 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 			</div>
 	
 		</div>
+
+
+		<div class="row">
+			<div class="col-sm-2">Xarxa Coeducacentres
+			</div>
+		  	<div class="col-sm-1">
+				<span class="badge bg-primary">COEDUCA</span>
+			</div>
+		  	<div class="col-sm-8">
+				<a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=7886&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+
+					RESOLUCIÓ de 6 de juliol de 2023, del secretari autonòmic d’Educació i Formació Professional, per la qual es dicten instruccions per a l’organització i el funcionament de les unitats específiques ubicades en centres docents ordinaris sostinguts amb fons públics per al curs 2023-2024. [2023/7819]
+				</a>
+			</div>
+	
+		</div>
+
+
 </div>
 
 
