--- a/normativa.html
+++ b/normativa.html
@@ -731,6 +731,20 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 	
 		</div>
 
+		<div class="row">
+			<div class="col-sm-2">INSTRUCCIONS 2023-2024 CEE
+			</div>
+		  	<div class="col-sm-1">
+				<span class="badge bg-primary">INSTRUCCIONS</span>
+			</div>
+		  	<div class="col-sm-8">
+				<a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=7785&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+
+			RESOLUCIÓ de 6 de juliol de 2023, del secretari autonòmic d'Educació i Formació Professional, per la qual es dicten instruccions per a l'organització i el funcionament dels centres d'Educació Especial sostinguts amb fons públics per al curs 2023-2024. [2023/7785]
+				</a>
+			</div>
+	
+		</div>
 
 </div>
 
