--- a/normativa.html
+++ b/normativa.html
@@ -731,6 +731,31 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 	
 		</div>
 
+
+		<div class="row">
+			<div class="col-sm-2">INSTRUCCIONS 2023-2024 INF-PRI
+			</div>
+		  	<div class="col-sm-1">
+				<span class="badge bg-primary">INSTRUCCIONS</span>
+			</div>
+		  	<div class="col-sm-8">
+				<a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=7350&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+
+			RESOLUCIÓ de 27 de juny de 2023, del secretari autonòmic d'Educació i Formació Professional, per la qual s'aproven les instruccions per a l'organització i el funcionament dels centres que imparteixen Educació Infantil de segon cicle i Educació Primària durant el curs 2023-2024. [2023/7350]
+				</a>
+			</div>
+	
+		</div>
+
+
+
+
+
+
+
+
+
+
 		<div class="row">
 			<div class="col-sm-2">INSTRUCCIONS 2023-2024 CEE
 			</div>
