--- a/normativa.html
+++ b/normativa.html
@@ -65,7 +65,10 @@
 		      <div class="row">
 			        <div class="col-sm-2">ONU</div>
 			        <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
-			        <div class="col-sm-8"><a href="https://www.ohchr.org/es/instruments-mechanisms/instruments/convention-rights-child" target="_blank">Convenció sobre els Drets dels Xiquets, 20 novembre 1989.</a></div>
+			        <div class="col-sm-8">
+			            <a href="https://www.un.org/es/events/childrenday/pdf/derechos.pdf"><Button type="button" class="btn btn-success btn-sm" target="_blank">UNICEF</button></a>
+			            <a href="https://www.boe.es/buscar/doc.php?id=BOE-A-1990-31312"><Button type="button" class="btn btn-success btn-sm" target="_blank">BOE</button></a>
+                  <a href="<a href="https://www.ohchr.org/es/instruments-mechanisms/instruments/convention-rights-child" target="_blank">Convenció sobre els Drets dels Xiquets, 20 novembre 1989.</a></div>
 		      </div>
       </div>
           
@@ -396,7 +399,7 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 		  <div class="col-sm-2">Organització Resposta Educativa</div>
 		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  <div class="col-sm-8">
-			  <a href="https://ceice.gva.es/documents/169149987/174708226/PT_AL_INF.pdf"><button type="button" class="btn btn-success btn-sm" target="_blank">Infografia</button></a>    <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/4442&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=4442&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 20/2019, de 30 d'abril, de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es regula l'organització de la resposta educativa per a la inclusió de l'alumnat en els centres docents sostinguts amb fons públics del sistema educatiu valencià. [2019/4442]</a>
+			  <a href="https://ceice.gva.es/documents/169149987/174708226/PT_AL_INF.pdf"><Button type="button" class="btn btn-success btn-sm" target="_blank">Infografia</button></a>    <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2019/4442&L=0&&texto=&solo_titulo=1&anyo_codigo=2019&codigo=4442&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 20/2019, de 30 d'abril, de la Conselleria d'Educació, Investigació, Cultura i Esport, per la qual es regula l'organització de la resposta educativa per a la inclusió de l'alumnat en els centres docents sostinguts amb fons públics del sistema educatiu valencià. [2019/4442]</a>
 		  </div>
 		</div>
   </div>
