--- a/normativa.html
+++ b/normativa.html
@@ -52,7 +52,7 @@
 
 
   <div id="myTabContent" class="tab-content">
-      <div class="tab-pane fade show active" id="Lleis">
+      <div class="tab-pane fade show active" id="ONU">
 
 	  	    <br />
 
@@ -66,9 +66,16 @@
 			        <div class="col-sm-2">ONU</div>
 			        <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 			        <div class="col-sm-8">
-			            <a href="https://www.un.org/es/events/childrenday/pdf/derechos.pdf"><Button type="button" class="btn btn-success btn-sm" target="_blank">UNICEF</button></a>
-			            <a href="https://www.boe.es/buscar/doc.php?id=BOE-A-1990-31312"><Button type="button" class="btn btn-success btn-sm" target="_blank">BOE</button></a>
+			            <a href="https://www.un.org/es/events/childrenday/pdf/derechos.pdf" target="_blank"><Button type="button" class="btn btn-success btn-sm" target="_blank">UNICEF</button></a>
+			            <a href="https://www.boe.es/buscar/doc.php?id=BOE-A-1990-31312" target="_blank"><Button type="button" class="btn btn-success btn-sm" target="_blank">BOE</button></a>
                   <a href="<a href="https://www.ohchr.org/es/instruments-mechanisms/instruments/convention-rights-child" target="_blank">Convenció sobre els Drets dels Xiquets, 20 novembre 1989.</a></div>
+		      </div>
+          
+		      <div class="row">
+			        <div class="col-sm-2">ONU</div>
+			        <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+			        <div class="col-sm-8">
+                  <a href="<a href="https://unesdoc.unesco.org/ark:/48223/pf0000245656_spa" target="_blank">Declaració d'Incheon i Marc d'Acció per a la realització de l'Objectiu de Desenvolupament Sostenible</a></div>
 		      </div>
       </div>
           
