Declaració Incheon, altra vegada

--- a/normativa.html
+++ b/normativa.html
@@ -75,7 +75,7 @@
 			        <div class="col-sm-2">ONU</div>
 			        <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 			        <div class="col-sm-8">
-                  <a href="<a href="https://unesdoc.unesco.org/ark:/48223/pf0000245656_spa" target="_blank">Declaració d'Incheon i Marc d'Acció per a la realització de l'Objectiu de Desenvolupament Sostenible</a></div>
+                  <a href="https://unesdoc.unesco.org/ark:/48223/pf0000245656_spa" target="_blank">Declaració d'Incheon i Marc d'Acció per a la realització de l'Objectiu de Desenvolupament Sostenible</a></div>
 		      </div>
       </div>
           
