--- a/normativa.html
+++ b/normativa.html
@@ -389,6 +389,16 @@ Título III. Formación. Artículo 23. Garantía de especialización profesional
 		<br />
 
 		
+		<div class="row">
+		    <div class="col-sm-2">Assetjament</div>
+		    <div class="col-sm-1"><span class="badge bg-info">PRI</span> <span class="badge bg-info">SEC</span></div>
+		    <div class="col-sm-8">
+			      <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=8185&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 14 de juliol de 2023, de la directora general d'Inclusió Educativa, per la qual es dicten instruccions sobre el model d'actuació en situacions de possible assetjament i ciberassetjament escolar. [2023/8185]</a>
+		    </div>
+
+		</div>
+		<br />
+
   </div>
 
 		<br />
