--- a/normativa.html
+++ b/normativa.html
@@ -120,8 +120,66 @@
 		  	<div class="col-sm-2">Llibertat sexual</div>
 			  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
         <div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-14630&p=20220907&tn=2" target="_blank">Ley Orgánica 10/2022, de 6 de septiembre, de garantía integral de la libertad sexual.</a> <br />Título II. Prevención y detección. Capítulo I. Medidas de prevención y sensibilización. Artículo 7. Prevención y sensibilización en el ámbito educativo. <br />
-Título II. Prevención y detección. Capítulo II. Detección de las violencias sexuales. Artículo 19. Detección y respuesta en el ámbito educativo. <br />
-Título III. Formación. Artículo 23. Garantía de especialización profesional a través de la formación. Artículo 24. Formación en el ámbito docente y educativo. <br /></div>
+Título II. Prevención y detección. Capítulo II. Detección de las violencias sexuales. Artículo 19. Detección y respuesta en el ámbito educativo. <br />Título III. Formación. Artículo 23. Garantía de especialización profesional a través de la formación. Artículo 24. Formación en el ámbito docente y educativo. <br /></div>
+
+        <br />
+
+    <div class="row">
+		  	    <div class="col-sm-2">PROTECCIÓ INFÀNCIA</div>
+			      <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  	    <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2021-9347" target="_blank">Ley Orgánica 8/2021, de 4 de junio, de protección integral a la infancia y la adolescencia frente a la violencia.</a></div>
+    </div>
+
+    <br />
+
+    <div class="row">
+		  	<div class="col-sm-2">PERSONES AMB DISCAPACITAT</div>
+			  <div class="col-sm-1"><span class="badge bg-primary">JUR</span></div>
+		  	<div class="col-sm-8"><a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2021-9233" target="_blank">Ley 8/2021, de 2 de junio, por la que se reforma la legislación civil y procesal para el apoyo a las personas con discapacidad en el ejercicio de su capacidad jurídica.</a></div>
+    </div>
+
+    <br />
+
+    <div class="row">
+		  	<div class="col-sm-2">DRETS INF-ADOL</div>
+			  <div class="col-sm-1"><span class="badge bg-primary">JUR</span></div>
+		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2018&codigo=12057&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo" target="_blank">LLEI 26/2018, de 21 de desembre, de la Generalitat, de drets i garanties de la infància i adolescència. [2018/12057]</a></div>
+    </div>
+
+    <br />
+    
+    <div class="row">
+		  	<div class="col-sm-2">PERSONES LGTBI</div>
+			  <div class="col-sm-1"><span class="badge bg-primary">JUR</span></div>
+		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2018&codigo=11252&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">LLEI 23/2018, de 29 de novembre, de la Generalitat, d'igualtat de les persones LGTBI. [2018/11252]</a></div>
+    </div>
+
+    <br />
+
+    <div class="row">
+		  	<div class="col-sm-2">IDENTITAT DE GÈNERE</div>
+			  <div class="col-sm-1"><span class="badge bg-primary">JUR</span></div>
+		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2017&codigo=3089&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">LLEI 8/2017, de 7 d'abril, de la Generalitat, integral del reconeixement del dret a la identitat i a l'expressió de gènere a la Comunitat Valenciana. [2017/3089]</a></div>
+    </div>
+
+    <br />
+
+    <div class="row">
+		  	<div class="col-sm-2">AUTORITAT DEL PROFESSORAT</div>
+			  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2010&codigo=13298&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">LLEI 15/2010, de 3 de desembre, de la Generalitat, d'Autoritat del Professorat [2010/13298]</a></div>
+    </div>
+
+    <br />
+
+    <div class="row">
+		  	<div class="col-sm-2">ESTATUT PERSONES AMB DISCAPACITAT</div>
+			  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2018&codigo=4097&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">LLEI 9/2018, de 24 d'abril, de la Generalitat, de modificació de la Llei 11/2003, de 10 d'abril, de la Generalitat, sobre l'estatut de les persones amb discapacitat. [2018/4097]</a></div>
+    </div>
+
+    <br />
+
 
 		</div>
 		
