--- a/normativa.html
+++ b/normativa.html
@@ -121,6 +121,7 @@
 			  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
         <div class="col-sm-8"><a href="https://boe.es/buscar/act.php?id=BOE-A-2022-14630&p=20220907&tn=2" target="_blank">Ley Orgánica 10/2022, de 6 de septiembre, de garantía integral de la libertad sexual.</a> <br />Título II. Prevención y detección. Capítulo I. Medidas de prevención y sensibilización. Artículo 7. Prevención y sensibilización en el ámbito educativo. <br />
 Título II. Prevención y detección. Capítulo II. Detección de las violencias sexuales. Artículo 19. Detección y respuesta en el ámbito educativo. <br />Título III. Formación. Artículo 23. Garantía de especialización profesional a través de la formación. Artículo 24. Formación en el ámbito docente y educativo. <br /></div>
+		</div>
 
         <br />
 
