normativa.html - Ajustos html

--- a/normativa.html
+++ b/normativa.html
@@ -458,7 +458,8 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 
   </div>
 
-		<br />
+	<br />
+  	<br />
   
   
   <div class="tab-pane fade show active" id="Ordres">
@@ -535,6 +536,8 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
   </div>
   
 
+  	<br />
+  	<br />
 
 
   <div class="tab-pane fade show active" id="Resolucions">
@@ -567,7 +570,12 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 			</div>
   </div>
   
-  <div class="tab-pane fade show active" id="Resolució">
+
+  	<br />
+  	<br />
+
+
+  <div class="tab-pane fade show active" id="Resolucions">
 
 	  
 	  	<br />
@@ -575,6 +583,7 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 		<h3><span class="badge bg-danger">DOGV</span>    Resolucions</h3>
 
 	  	<hr />
+	  	<br />
 
 		
 		<div class="row">
