--- a/normativa.html
+++ b/normativa.html
@@ -126,7 +126,7 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
         <br />
 
     <div class="row">
-/		  	    <div class="col-sm-2">PROTECCIÓ INFÀNCIA</div>
+		  	    <div class="col-sm-2">PROTECCIÓ INFÀNCIA</div>
 			      <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
 		  	    <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2021-9347" target="_blank">Ley Orgánica 8/2021, de 4 de junio, de protección integral a la infancia y la adolescencia frente a la violencia.</a></div>
     </div>
