normativa.html EOI

--- a/normativa.html
+++ b/normativa.html
@@ -197,6 +197,14 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 		<hr />
 
 		<div class="row">
+		    <div class="col-sm-2">Certificació  Nivell Idiomes</div>
+			  <div class="col-sm-1"><span class="badge bg-info">IDIOMES</span></div>
+		    <div class="col-sm-8">
+			      <a href="https://boe.es/buscar/act.php?id=BOE-A-2019-317" target="_blank">https://www.boe.es/eli/es/rd/2019/01/11/1/con</a>
+		    </div>
+		</div>
+
+		<div class="row">
 		  <div class="col-sm-2">Avaluació i Promoció</div>
 			<div class="col-sm-1"><span class="badge bg-dark">DEROG.</span></div>
 		  <div class="col-sm-8">
@@ -470,6 +478,27 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 
 		<hr />
 
+
+		<div class="row">
+		    <div class="col-sm-2">Dret Objectivitat Avaluació</div>
+		    <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		    <div class="col-sm-8">
+			      <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2011&codigo=13033&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDE 32/2011, de 20 de desembre, de la Conselleria d'Educació, Formació i Ocupació, per la qual es regula el dret de l'alumnat a l'objectivitat en l'avaluació, i s'establix el procediment de reclamació de qualificacions obtingudes i de les decisions de promoció, de certificació o d'obtenció del títol acadèmic que corresponga. [2011/13033]</a>
+		    </div>
+		</div>
+
+
+
+
+		<div class="row">
+		    <div class="col-sm-2">Transició Primària-Secundària</div>
+		    <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
+		    <div class="col-sm-8">
+			      <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2011/7216&L=0&&texto=&solo_titulo=1&anyo_codigo=2011&codigo=7216&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDE 46/2011, de 8 de juny, de la Conselleria d'Educació, per la qual es regula la transició des de l'etapa d'Educació Primària a l'Educació Secundària Obligatòria a la Comunitat Valenciana. [2011/7216]</a>
+		</div>
+    
+		</div>
+
 		<div class="row">
 		  <div class="col-sm-2">Organització Resposta Educativa</div>
 		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
@@ -481,12 +510,13 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 
 		<br />
 
+
 		<div class="row">
-		  <div class="col-sm-2">Transició Primària-Secundària</div>
-		  <div class="col-sm-1"><span class="badge bg-primary">EDU</span></div>
-		  <div class="col-sm-8">
-			  <a href="https://dogv.gva.es/va/resultat-dogv?signatura=2011/7216&L=0&&texto=&solo_titulo=1&anyo_codigo=2011&codigo=7216&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDE 46/2011, de 8 de juny, de la Conselleria d'Educació, per la qual es regula la transició des de l'etapa d'Educació Primària a l'Educació Secundària Obligatòria a la Comunitat Valenciana. [2011/7216]</a>
-		  </div>
+		    <div class="col-sm-2">Marc Europeu Llengües</div>
+		    <div class="col-sm-1"><span class="badge bg-primary">EOI</span></div>
+		    <div class="col-sm-8">
+			      <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2022&codigo=5727&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 34/2022, de 14 de juny, de la consellera d'Educació, Cultura i Esport, per la qual es regulen l'avaluació dels ensenyaments d'idiomes de règim especial i les proves de certificació dels nivells del Marc Europeu Comú de Referència per a les Llengües a la Comunitat Valenciana. [2022/5727]</a>
+		    </div>
 		</div>
 
 		<br />
@@ -502,7 +532,7 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 		<br />
 
 		<div class="row">
-		  <div class="col-sm-2">Full de notificació Atenció SocioPrisopedagògica</div>
+		  <div class="col-sm-2">Full de notificació Atenció SocioPsisopedagògica</div>
 		  <div class="col-sm-1"><span class="badge bg-dark">ORIENT</span></div>
 		  <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultat-dogv?signatura=2021/7878&L=0&&texto=&solo_titulo=1&anyo_codigo=2021&codigo=7878&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">ORDRE 5/2021, de 15 de juliol, de la Vicepresidència i Conselleria d'Igualtat i Polítiques Inclusives i de la Conselleria d'Educació, Cultura i Esport, per la qual s'aprova el nou full de notificació per a l'atenció socioeducativa infantil i protecció de l'alumnat menor d'edat i s'estableix la coordinació interadministrativa per a la protecció integral de la infància i adolescència. [2021/7878]</a>
 		  </div>
@@ -642,6 +672,21 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 			  </a>
 		  </div>
 		</div>
+
+    <br />
+
+
+		<div class="row">
+		    <div class="col-sm-2">Prova Unificada de Certificació PUC</div>
+		    <div class="col-sm-1"><span class="badge bg-dark">EOI</span></div>
+		    <div class="col-sm-8">
+			      <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=1522&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+				        RESOLUCIÓ de 13 de febrer de 2023, del director general de Política Lingüística i Gestió del Multilingüisme, per la qual s'estableixen el calendari i el procés d'inscripció i matriculació per a la realització de la prova unificada de certificació (PUC) en les escoles oficials d'idiomes de la Comunitat Valenciana, corresponents a la convocatòria 2023. [2023/1522]
+			      </a>
+		    </div>
+		</div>
+
+
 
 		<br />	
 
