--- a/digital.html
+++ b/digital.html
@@ -139,8 +139,15 @@
 		  <div class="col-sm-2">Esquema Nacional de Seguridad</div>
 		  <div class="col-sm-1"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-7191&p=20220504&tn=2" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
 		  <div class="col-sm-8"><a href="https://www.boe.es/buscar/act.php?id=BOE-A-2022-7191&p=20220504&tn=1" target="_blank">Real Decreto 311/2022, de 3 de mayo, por el que se regula el Esquema Nacional de Seguridad</a></div>
-
 		</div>
+
+				<div class="row">
+		  <div class="col-sm-2">Agencia Española de Supervisión de Inteligencia Artificial. Estatuto</div>
+		  <div class="col-sm-1"><a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2023-18911" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank">Index</button></a></div>
+		  <div class="col-sm-8"><a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2023-18911" target="_blank">https://www.boe.es/diario_boe/txt.php?id=BOE-A-2023-18911</a></div>
+		</div>
+
+						
   </div>
   
 
