--- a/normativa.html
+++ b/normativa.html
@@ -990,7 +990,23 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 	
 		</div>
 
+		<div class="row">
+			<div class="col-sm-2">Atenció Primerenca
+			</div>
+		  	<div class="col-sm-1">
+				<span class="badge bg-primary">ORI</span>
+			</div>
+		  	<div class="col-sm-8">
+				<a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=7246&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+					RESOLUCIÓ de 19 de juny de 2023, conjunta de la Direcció General de Diversitat Funcional i Salut Mental i de la Direcció General d'Assistència Sanitària, per la qual s'estableix el protocol per a la coordinació en atenció primerenca. [2023/7246]
+				</a>
+			</div>
+	
+		</div>
 
+
+
+	  
 
 </div>
 
