--- a/normativa.html
+++ b/normativa.html
@@ -982,17 +982,31 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 		<div class="row">
 			<div class="col-sm-2">Atenció Primerenca
 			</div>
+		  <div class="col-sm-1">
+				  <span class="badge bg-primary">ORI</span>
+			</div>
+		  <div class="col-sm-8">
+				  <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=7246&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+					    RESOLUCIÓ de 19 de juny de 2023, conjunta de la Direcció General de Diversitat Funcional i Salut Mental i de la Direcció General d'Assistència Sanitària, per la qual s'estableix el protocol per a la coordinació en atenció primerenca. [2023/7246]
+				  </a>
+			</div>
+	    
+		</div>
+
+
+		<div class="row">
+			<div class="col-sm-2">Competència Digital Docent
+			</div>
 		  	<div class="col-sm-1">
-				<span class="badge bg-primary">ORI</span>
+				<span class="badge bg-primary">CDC</span>
 			</div>
 		  	<div class="col-sm-8">
-				<a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=7246&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
-					RESOLUCIÓ de 19 de juny de 2023, conjunta de la Direcció General de Diversitat Funcional i Salut Mental i de la Direcció General d'Assistència Sanitària, per la qual s'estableix el protocol per a la coordinació en atenció primerenca. [2023/7246]
+				    <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=11339&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+                RESOLUCIÓ de 7 de novembre de 2023, de la Direcció general de personal docent, de la Conselleria d'Educació, Universitats i Ocupació, per la qual es regula el procediment per a l'acreditació de la competència digital docent. [2023/11339]
 				</a>
 			</div>
 	
 		</div>
-
 
 
 	  
