normativa.html PAF - iMoute

--- a/normativa.html
+++ b/normativa.html
@@ -1008,6 +1008,34 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 	
 		</div>
 
+		<div class="row">
+			<div class="col-sm-2">iMoute
+			</div>
+		  	<div class="col-sm-1">
+				<span class="badge bg-primary">iMoute</span>
+			</div>
+		  	<div class="col-sm-8">
+				    <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=10944&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+                RESOLUCIÓ de 19 d'octubre de 2023, de la Direcció General de Personal Docent, per la qual es convoca l'activitat de formació del professorat iMou-te per al curs 2023-2024. [2023/10944]
+				</a>
+			</div>
+	
+		</div>
+
+
+		<div class="row">
+			<div class="col-sm-2">Pla Anual de Formació
+			</div>
+		  	<div class="col-sm-1">
+				<span class="badge bg-primary">PAF</span>
+			</div>
+		  	<div class="col-sm-8">
+				    <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=11471&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+                RESOLUCIÓ de 13 de novembre de 2023, del conseller d'Educació, Universitats i Ocupació, per la qual es regula el Programa anual de formació permanent de centre, es convoca la sol·licitud de les modalitats formatives de projectes de formació en centres, seminaris i grups de treball, per a desenvolupar-les durant el curs 2023-2024, i s'estableix la dotació de recursos econòmics per als centres docents públics de titularitat de la Generalitat. [2023/11471] 
+				</a>
+			</div>
+	
+		</div>
 
 	  
 
