--- a/normativa.html
+++ b/normativa.html
@@ -1022,6 +1022,7 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 	
 		</div>
 
+		<br />
 
 		<div class="row">
 			<div class="col-sm-2">Pla Anual de Formació
@@ -1035,6 +1036,11 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 				</a>
 			</div>
 	
+		  	<div class="col-sm-8">
+				    <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=13158&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+					    RESOLUCIÓ de 27 de desembre de 2023, conjunta de la directora general d'Innovació i Inclusió Educativa i del director general d'Universitats, per la qual es dicten instruccions per a l'adaptació en les proves d'accés a les universitats públiques valencianes per a les persones amb necessitats específiques de suport educatiu per al curs 2023-2024. [2023/13158]
+				</a>
+			</div>
 		</div>
 
 	  
