--- a/normativa.html
+++ b/normativa.html
@@ -1045,7 +1045,7 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 			<div class="col-sm-2">Pla Anual de Formació
 			</div>
 		  	<div class="col-sm-1">
-				<span class="badge bg-primary">PAF</span>
+				<span class="badge bg-primary">PAU</span>
 			</div>
 		  	<div class="col-sm-8">
 				    <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=13158&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
