--- a/normativa.html
+++ b/normativa.html
@@ -1038,6 +1038,7 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
                 RESOLUCIÓ de 13 de novembre de 2023, del conseller d'Educació, Universitats i Ocupació, per la qual es regula el Programa anual de formació permanent de centre, es convoca la sol·licitud de les modalitats formatives de projectes de formació en centres, seminaris i grups de treball, per a desenvolupar-les durant el curs 2023-2024, i s'estableix la dotació de recursos econòmics per als centres docents públics de titularitat de la Generalitat.[2023/11471] 
 				</a>
 			</div>
+		</div>
 
 			<br />
 			
