--- a/normativa.html
+++ b/normativa.html
@@ -1041,21 +1041,39 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 		</div>
 
 			<br />
-			
-		<div class="row">
-			<div class="col-sm-2">Adaptacio PAU
+
+
+		  <div class="row">
+			    <div class="col-sm-2">Adaptacio PAU
+			    </div>
+		  	  <div class="col-sm-1">
+				      <span class="badge bg-danger">PAU</span>
+			    </div>
+		  	  <div class="col-sm-8">
+				      <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=13158&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+					        RESOLUCIÓ de 27 de desembre de 2023, conjunta de la directora general d'Innovació i Inclusió Educativa i del director general d'Universitats, per la qual es dicten instruccions per a l'adaptació en les proves d'accés a les universitats públiques valencianes per a les persones amb necessitats específiques de suport educatiu per al curs 2023-2024. [2023/13158]
+				      </a>
+			    </div>
+		  </div>
+	    
+
+		  <div class="row">
+			<div class="col-sm-2">Biblioteques
 			</div>
 		  	<div class="col-sm-1">
-				<span class="badge bg-danger">PAU</span>
+				<span class="badge bg-danger">BIB</span>
 			</div>
 		  	<div class="col-sm-8">
-				    <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2023&codigo=13158&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
-					    RESOLUCIÓ de 27 de desembre de 2023, conjunta de la directora general d'Innovació i Inclusió Educativa i del director general d'Universitats, per la qual es dicten instruccions per a l'adaptació en les proves d'accés a les universitats públiques valencianes per a les persones amb necessitats específiques de suport educatiu per al curs 2023-2024. [2023/13158]
+				    <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=2326&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+           RESOLUCIÓ de 13 de març de 2024, de la Conselleria d'Educació, Universitats i Ocupació, per la qual es convoca el projecte d'innovació de biblioteques escolars «Biblioinnova't» per als centres docents de titularitat pública de la Generalitat Valenciana per al curs 2023-2024.-24. [2024/2326] 
+
 				</a>
 			</div>
 		</div>
+	
 
-	  
+
+
 
 </div>
 
@@ -1096,7 +1114,7 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 		  </div>
 		</div>
 
-		<br />															 															 
+		<br />
 																		 		<div class="row">
 		  <div class="col-sm-2">Calendari Procediments NESE 2023-2024<br />
 		  <a href="https://ceice.gva.es/va/web/inclusioeducativa/escolaritzacio"><button type="button" class="btn btn-light btn-sm" target="_blank">ESCOLARIT</button></a></div>
@@ -1108,6 +1126,25 @@ educatiu i necessitats de compensació de desigualtats per al curs 2023-24</a>
 		</div>
 
 
+
+		<div class="row">
+		  <div class="col-sm-2">Protocols
+			<br />
+			<a href="https://ceice.gva.es/va/web/inclusioeducativa/personal-no-docent/normativa"><button type="button" class="btn btn-light btn-sm" target="_blank">NO DOCENT</button></a></div>
+		  <div class="col-sm-1"><span class="badge bg-light">PRO</span></div>
+		  <div class="col-sm-8"><a href="https://ceice.gva.es/documents/169149987/380485276/Infografia_Instuccio_20_marc_agent_extern_centre_educatiu.pdf" target="_blank">
+				  Models de Protocols per a la participacio d'Agents Externs als Centres
+			  </a></div>
+		</div>
+		
+	  <br />
+
+
+
+
+		<div class="row">
+
+		<div class="row">
 
 
 
