--- a/digital.html
+++ b/digital.html
@@ -198,6 +198,28 @@
 
       		</div>
 
+		<div class="row">
+
+		 	<div class="col-sm-2">Dispositius
+		 	</div>
+     		 	<div class="col-sm-1"><span class="badge bg-primary">EDU</span>
+      			</div>
+		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=3422&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=3422&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=</a>
+      			</div>
+
+      		</div>
+
+		<div class="row">
+
+		 	<div class="col-sm-2">Competència Digital
+		 	</div>
+     		 	<div class="col-sm-1"><span class="badge bg-primary">EDU</span>
+      			</div>
+		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=4717&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank"><RESOLUCIÓ de 15 de maig de 2024, de la Secretaria Autonòmica d'Educació, per la qual es regulen alguns aspectes per a l'obtenció dels nivells B1 i B2 de la competència digital docent i l'acreditació. [2024/4717]/a>
+      			</div>
+
+      		</div>
+
     	</div>
 
 	<div class="tab-pane fade show active" id="Ordre">
@@ -217,6 +239,9 @@
         		</div>
 
     	</div>
+
+  	<br />
+
 
 
     <div class="row">
