--- a/normativa.html
+++ b/normativa.html
@@ -1073,6 +1073,21 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 		</div>
 	
 
+			<br />
+
+		  <div class="row">
+			    <div class="col-sm-2">Universitat
+			    </div>
+		  	  <div class="col-sm-1">
+				      <span class="badge bg-danger">UNI</span>
+			    </div>
+		  	  <div class="col-sm-8">
+				      <a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=5059&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">
+		RESOLUCIÓ de 28 de maig de 2024, de la presidenta de la Comissió gestora dels processos d'accés i preinscripció en les universitats públiques del Sistema Universitari Valencià, per la qual es publiquen les dates del procediment d'admissió en el primer curs dels ensenyaments universitaris oficials de grau en les universitats públiques de la Comunitat Valenciana i els seus centres adscrits, per al curs 2024-2025. [2024/5059]
+				</a>
+			</div>
+		</div>
+	
 
 
 
