Mentoria Pla Digital

--- a/normativa.html
+++ b/normativa.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+resocalen  <!DOCTYPE html>
  <html lang="ca">
 	 <head>
 	   <title>Normativa Educació GVA</title>
@@ -996,7 +996,7 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 		<br />
 
 		<div class="row">
-			<div class="col-sm-2">Competència Digital Docent
+			<div class="col-sm-2">Competència Digital∑xocent
 			</div>
 		  	<div class="col-sm-1">
 				<span class="badge bg-primary">CDC</span>
