--- a/digital.html
+++ b/digital.html
@@ -224,6 +224,16 @@
 
       		</div>
 
+
+		 	<div class="col-sm-2">Mentoria Pla Digital
+		 	</div>
+     		 	<div class="col-sm-1"><span class="badge bg-primary">TIC</span>
+      			</div>
+		  	    <div class="col-sm-8"><a href=<"https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=5377&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 5 de juny de 2024, de la Secretaria Autonòmica d'Educació, per la qual es convoca un concurs per a la provisió durant un curs, en règim de comissió de servicis, de places de mentories digitals per a l'acompanyament i suport del Pla digital de centre i de la capacitació d'aules digitals interactives de la Comunitat Valenciana, dins dels programes «#CompDigEdu» i «#EcoDigEdu». [2024/5377]</a>
+      			</div>
+
+      		</div>
+
     	</div>
 
 	<div class="tab-pane fade show active" id="Ordre">
