--- a/digital.html
+++ b/digital.html
@@ -179,7 +179,7 @@
 	</div>
 
 
-	<div class="tab-pane fade show active" id="Resolucio">
+  <div class="tab-pane fade show active" id="Resolucio">
 
 	  	<br />
 
@@ -205,36 +205,43 @@
 		 	<div class="col-sm-2">Dispositius
 		 	</div>
      		 	<div class="col-sm-1"><span class="badge bg-primary">EDU</span>
-      			</div>
-		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=3422&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 17 d'abril de 2024, sobre determinats aspectes per a la regulació de l'ús de dispositius mòbils en centres educatius no universitaris sostinguts amb fons públics de la Comunitat Valenciana. [2024/3422]</a>
-      			</div>
-
       		</div>
+		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=3422&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 17 d'abril de 2024, sobre determinats aspectes per a la regulació de l'ús de dispositius mòbils en centres educatius no universitaris sostinguts amb fons públics de la Comunitat Valenciana. [2024/3422]</a>
+      	</div>
+
+    </div>
 
 		<br />
 
 		<div class="row">
 
-		 	<div class="col-sm-2">Competència Digital
-		 	</div>
-     		 	<div class="col-sm-1"><span class="badge bg-primary">EDU</span>
-      			</div>
-		  	<div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=4717&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 15 de maig de 2024, de la Secretaria Autonòmica d'Educació, per la qual es regulen alguns aspectes per a l'obtenció dels nivells B1 i B2 de la competència digital docent i l'acreditació. [2024/4717]</a>
-      			</div>
+		 	  <div class="col-sm-2">
+            Competència Digital
+		 	  </div>
+     	  <div class="col-sm-1"><span class="badge bg-primary">EDU</span>
+        </div>
+		    <div class="col-sm-8"><a href="https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=4717&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 15 de maig de 2024, de la Secretaria Autonòmica d'Educació, per la qual es regulen alguns aspectes per a l'obtenció dels nivells B1 i B2 de la competència digital docent i l'acreditació. [2024/4717]</a>
+        </div>
 
-      		</div>
+    </div>
 
 
-		 	<div class="col-sm-2">Mentoria Pla Digital
-		 	</div>
-     		 	<div class="col-sm-1"><span class="badge bg-primary">TIC</span>
-      			</div>
-		  	    <div class="col-sm-8"><a href=<"https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=5377&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 5 de juny de 2024, de la Secretaria Autonòmica d'Educació, per la qual es convoca un concurs per a la provisió durant un curs, en règim de comissió de servicis, de places de mentories digitals per a l'acompanyament i suport del Pla digital de centre i de la capacitació d'aules digitals interactives de la Comunitat Valenciana, dins dels programes «#CompDigEdu» i «#EcoDigEdu». [2024/5377]</a>
-      			</div>
+    <div class="row">
+        <div class="col-sm-2">
+          Mentoria Pla Digital
+        </div>
 
-      		</div>
+        <div class="col-sm-1">
+          <span class="badge bg-primary">TIC</span>
+        </div>
 
-    	</div>
+        <div class="col-sm-8">
+          <a href=<"https://dogv.gva.es/va/resultats-dogv??texto=&solo_titulo=1&anyo_codigo=2024&codigo=5377&numero_dogv=&FECHA_INICIAL=&FECHA_FINAL=&tipo_disposicion=&organismo=" target="_blank">RESOLUCIÓ de 5 de juny de 2024, de la Secretaria Autonòmica d'Educació, per la qual es convoca un concurs per a la provisió durant un curs, en règim de comissió de servicis, de places de mentories digitals per a l'acompanyament i suport del Pla digital de centre i de la capacitació d'aules digitals interactives de la Comunitat Valenciana, dins dels programes «#CompDigEdu» i «#EcoDigEdu». [2024/5377]</a>
+        </div>
+
+    </div>
+
+  </div>
 
 	<div class="tab-pane fade show active" id="Ordre">
 
