Concurs de Trasllads

--- a/normativa.html
+++ b/normativa.html
@@ -271,6 +271,24 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 			  <a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2023-9553" target="_blank">Real Decreto 286/2023, de 18 de abril, por el que se regula la asignación de materias en Educación Secundaria Obligatoria y en Bachillerato a las especialidades de distintos cuerpos de funcionarios docentes, y se modifican diversas normas relativas al profesorado de enseñanzas no universitarias.</a>
 		  </div>
 
+		<br />
+
+		<div class="row">
+		  <div class="col-sm-2">Concurs de Trasllad Estatal</div>
+		  <div class="col-sm-1"><span class="badge bg-info">DOCENT</span> </div>
+		  <div class="col-sm-8">
+			  <a href="https://www.boe.es/diario_boe/txt.php?id=BOE-A-2024-14628" target="_blank">Real Decreto 677/2024, de 16 de julio, por el que se modifica el Real Decreto 1364/2010, de 29 de octubre, por el que se regula el concurso de traslados de ámbito estatal entre personal funcionario de los cuerpos docentes contemplados en la Ley Orgánica 2/2006, de 3 de mayo, de Educación, y otros procedimientos de provisión de plazas a cubrir por los mismos.</a>
+		  </div>
+
+		</div>
+
+	  
+  </div>
+  
+  	<br />
+  	<br />
+
+  
 		</div>
 
 	  
