--- a/digital.html
+++ b/digital.html
@@ -67,7 +67,7 @@
 
       <div class="row">
 
-          <div class="col-sm-2">Protecció de Dades
+        <div class="col-sm-2">Protecció de Dades
         </div>
 
         <div class="col-sm-1"><a href="https://www.boe.es/buscar/doc.php?id=DOUE-L-2016-80807" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank"> Index</button></a>
@@ -75,6 +75,23 @@
 
         <div class="col-sm-8"><a href="https://www.boe.es/buscar/doc.php?id=DOUE-L-2016-80807" target="_blank">Reglamento (UE) 2016/679 del Parlamento Europeo y del Consejo, de 27 de abril de 2016, relativo a la protección de las personas físicas en lo que respecta al tratamiento de datos personales y a la libre circulación de estos datos y por el que se deroga la Directiva 95/46/CE (Reglamento general de protección de datos).</a>
         </div>
+
+      </div>
+
+      <br />
+
+      <div class="row">
+
+        <div class="col-sm-2">Reglament itel·ligència Artificial
+        </div>
+
+        <div class="col-sm-1"><a href="https://eur-lex.europa.eu/legal-content/ES/TXT/PDF/?uri=OJ:L_202401689" target="_blank"><button type="button" class="btn btn-info btn-sm" target="_blank"> Index</button></a>
+        </div>
+
+        <div class="col-sm-8"><a href="https://eur-lex.europa.eu/legal-content/ES/TXT/PDF/?uri=OJ:L_202401689" target="_blank">REGLAMENTO (UE) 2024/1689 DEL PARLAMENTO EUROPEO Y DEL CONSEJO de 13 de junio de 2024 por el que se establecen normas armonizadas en materia de inteligencia artificial y por el que se modifican los Reglamentos (CE) n.o 300/2008, (UE) n.o 167/2013, (UE) n.o 168/2013, (UE) 2018/858, (UE) 2018/1139 y (UE) 2019/2144 y las Directivas 2014/90/UE, (UE) 2016/797 y (UE) 2020/1828 (Reglamento de Inteligencia Artificial) (Texto pertinente a efectos del EEE)
+</a>
+        </div>
+
       </div>
   </div>
 
