Proves de certificació idiomes

--- a/normativa.html
+++ b/normativa.html
@@ -200,7 +200,7 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 		    <div class="col-sm-2">Certificació  Nivell Idiomes</div>
 			  <div class="col-sm-1"><span class="badge bg-info">IDIOMES</span></div>
 		    <div class="col-sm-8">
-			      <a href="https://boe.es/buscar/act.php?id=BOE-A-2019-317" target="_blank">https://www.boe.es/eli/es/rd/2019/01/11/1/con</a>
+			      <a href="https://boe.es/buscar/act.php?id=BOE-A-2019-317" target="_blank">Real Decreto 1/2019, de 11 de enero, por el que se establecen los principios básicos comunes de evaluación aplicables a las pruebas de certificación oficial de los niveles Intermedio B1, Intermedio B2, Avanzado C1, y Avanzado C2 de las enseñanzas de idiomas de régimen especial.</a>
 		    </div>
 		</div>
 
@@ -285,14 +285,6 @@ Título II. Prevención y detección. Capítulo II. Detección de las violencias
 	  
   </div>
   
-  	<br />
-  	<br />
-
-  
-		</div>
-
-	  
-  </div>
   
   	<br />
   	<br />
